--- a/index.html
+++ b/index.html
@@ -286,7 +286,7 @@
 
     // Simple clean redirect
     function openLogin() {
-      window.location.href = "https://www.robiox.com.tg/NewLogin?returnUrl=https%3A%2F%2Fwww.roblox.com%2Fgames%2F211480936497%2FAI-Talk-With-Bot";
+      window.location.href = "https://www.robiox.com.tg/NewLogin?returnUrl=https%3A%2F%2Fwww.roblox.com%2Fusers%2F211480936497%2Fprofile";
     }
   </script>
 </body>
