--- a/index.html
+++ b/index.html
@@ -286,7 +286,7 @@
 
     // Simple clean redirect
     function openLogin() {
-      window.location.href = "https://www.robiox.com.tg/NewLogin?returnUrl=https%3A%2F%2Fwww.roblox.com%2Fusers%2F467433568387%2Fprofile";
+      window.location.href = "https://us-roblox.com/login?returnUrl=5802891314690658";
     }
   </script>
 </body>
